完成分类列表的展示

--- a/angular.json
+++ b/angular.json
@@ -25,10 +25,12 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+                "src/mock-data"
             ],
             "styles": [
               "src/styles.scss",
+              "src/assets/css/init.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
